PumlPlanerTester/Grammar/PumlgParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./Grammar/Pumlg.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class PumlgParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, CONNECTOR=31, 
		NEWPAGE=32, NEWLINE=33, IDENT=34, COMMENT=35, WS=36;
	public const int
		RULE_uml = 0, RULE_class_diagram = 1, RULE_class_declaration = 2, RULE_hide_declaration = 3, 
		RULE_attribute = 4, RULE_method = 5, RULE_connection_left = 6, RULE_connection_right = 7, 
		RULE_connection = 8, RULE_multiplicity = 9, RULE_visibility = 10, RULE_function_argument = 11, 
		RULE_function_argument_list = 12, RULE_template_argument = 13, RULE_template_argument_list = 14, 
		RULE_ident = 15, RULE_modifiers = 16, RULE_stereotype = 17, RULE_type_declaration = 18, 
		RULE_class_type = 19, RULE_item_list = 20, RULE_enum_declaration = 21;
	public static readonly string[] ruleNames = {
		"uml", "class_diagram", "class_declaration", "hide_declaration", "attribute", 
		"method", "connection_left", "connection_right", "connection", "multiplicity", 
		"visibility", "function_argument", "function_argument_list", "template_argument", 
		"template_argument_list", "ident", "modifiers", "stereotype", "type_declaration", 
		"class_type", "item_list", "enum_declaration"
	};

	private static readonly string[] _LiteralNames = {
		null, "'@startuml'", "'@enduml'", "'{'", "'}'", "'hide'", "'('", "')'", 
		"'\"'", "':'", "'*'", "'0..1'", "'0..*'", "'1..*'", "'1'", "'+'", "'-'", 
		"'#'", "','", "'{static}'", "'{abstract}'", "'<<'", "'>>'", "'<'", "'>'", 
		"'['", "']'", "'abstract'", "'class'", "'interface'", "'enum'", null, 
		"'newpage'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "CONNECTOR", "NEWPAGE", "NEWLINE", 
		"IDENT", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Pumlg.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PumlgParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PumlgParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PumlgParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class UmlContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(PumlgParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Class_diagramContext class_diagram() {
			return GetRuleContext<Class_diagramContext>(0);
		}
		public UmlContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_uml; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.EnterUml(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.ExitUml(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPumlgVisitor<TResult> typedVisitor = visitor as IPumlgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUml(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UmlContext uml() {
		UmlContext _localctx = new UmlContext(Context, State);
		EnterRule(_localctx, 0, RULE_uml);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			Match(T__0);
			State = 47;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				State = 45;
				Match(NEWLINE);
				}
				break;
			case 2:
				{
				State = 46;
				class_diagram();
				}
				break;
			}
			State = 49;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Class_diagramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Class_declarationContext[] class_declaration() {
			return GetRuleContexts<Class_declarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Class_declarationContext class_declaration(int i) {
			return GetRuleContext<Class_declarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConnectionContext[] connection() {
			return GetRuleContexts<ConnectionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConnectionContext connection(int i) {
			return GetRuleContext<ConnectionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Enum_declarationContext[] enum_declaration() {
			return GetRuleContexts<Enum_declarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Enum_declarationContext enum_declaration(int i) {
			return GetRuleContext<Enum_declarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Hide_declarationContext[] hide_declaration() {
			return GetRuleContexts<Hide_declarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Hide_declarationContext hide_declaration(int i) {
			return GetRuleContext<Hide_declarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(PumlgParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(PumlgParser.NEWLINE, i);
		}
		public Class_diagramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_class_diagram; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.EnterClass_diagram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.ExitClass_diagram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPumlgVisitor<TResult> typedVisitor = visitor as IPumlgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClass_diagram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Class_diagramContext class_diagram() {
		Class_diagramContext _localctx = new Class_diagramContext(Context, State);
		EnterRule(_localctx, 2, RULE_class_diagram);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 27783069728L) != 0)) {
				{
				State = 56;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__26:
				case T__27:
				case T__28:
					{
					State = 51;
					class_declaration();
					}
					break;
				case IDENT:
					{
					State = 52;
					connection();
					}
					break;
				case T__29:
					{
					State = 53;
					enum_declaration();
					}
					break;
				case T__4:
					{
					State = 54;
					hide_declaration();
					}
					break;
				case NEWLINE:
					{
					State = 55;
					Match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Class_declarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Class_typeContext class_type() {
			return GetRuleContext<Class_typeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentContext ident() {
			return GetRuleContext<IdentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributeContext[] attribute() {
			return GetRuleContexts<AttributeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributeContext attribute(int i) {
			return GetRuleContext<AttributeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MethodContext[] method() {
			return GetRuleContexts<MethodContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MethodContext method(int i) {
			return GetRuleContext<MethodContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(PumlgParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(PumlgParser.NEWLINE, i);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_class_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.EnterClass_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.ExitClass_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPumlgVisitor<TResult> typedVisitor = visitor as IPumlgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClass_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Class_declarationContext class_declaration() {
		Class_declarationContext _localctx = new Class_declarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_class_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			class_type();
			State = 62;
			ident();
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 63;
				Match(T__2);
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 25771606016L) != 0)) {
					{
					State = 67;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
					case 1:
						{
						State = 64;
						attribute();
						}
						break;
					case 2:
						{
						State = 65;
						method();
						}
						break;
					case 3:
						{
						State = 66;
						Match(NEWLINE);
						}
						break;
					}
					}
					State = 71;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 72;
				Match(T__3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Hide_declarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentContext ident() {
			return GetRuleContext<IdentContext>(0);
		}
		public Hide_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hide_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.EnterHide_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.ExitHide_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPumlgVisitor<TResult> typedVisitor = visitor as IPumlgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHide_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Hide_declarationContext hide_declaration() {
		Hide_declarationContext _localctx = new Hide_declarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_hide_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			Match(T__4);
			State = 76;
			ident();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AttributeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentContext ident() {
			return GetRuleContext<IdentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(PumlgParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VisibilityContext visibility() {
			return GetRuleContext<VisibilityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModifiersContext modifiers() {
			return GetRuleContext<ModifiersContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_declarationContext type_declaration() {
			return GetRuleContext<Type_declarationContext>(0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attribute; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.EnterAttribute(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.ExitAttribute(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPumlgVisitor<TResult> typedVisitor = visitor as IPumlgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAttribute(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AttributeContext attribute() {
		AttributeContext _localctx = new AttributeContext(Context, State);
		EnterRule(_localctx, 8, RULE_attribute);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 229376L) != 0)) {
				{
				State = 78;
				visibility();
				}
			}

			State = 82;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__18 || _la==T__19) {
				{
				State = 81;
				modifiers();
				}
			}

			State = 85;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				{
				State = 84;
				type_declaration();
				}
				break;
			}
			State = 87;
			ident();
			State = 88;
			Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentContext ident() {
			return GetRuleContext<IdentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(PumlgParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VisibilityContext visibility() {
			return GetRuleContext<VisibilityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModifiersContext modifiers() {
			return GetRuleContext<ModifiersContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_declarationContext type_declaration() {
			return GetRuleContext<Type_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Function_argument_listContext function_argument_list() {
			return GetRuleContext<Function_argument_listContext>(0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_method; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.EnterMethod(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.ExitMethod(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPumlgVisitor<TResult> typedVisitor = visitor as IPumlgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethod(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodContext method() {
		MethodContext _localctx = new MethodContext(Context, State);
		EnterRule(_localctx, 10, RULE_method);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 229376L) != 0)) {
				{
				State = 90;
				visibility();
				}
			}

			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__18 || _la==T__19) {
				{
				State = 93;
				modifiers();
				}
			}

			State = 97;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				State = 96;
				type_declaration();
				}
				break;
			}
			State = 99;
			ident();
			State = 100;
			Match(T__5);
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENT) {
				{
				State = 101;
				function_argument_list();
				}
			}

			State = 104;
			Match(T__6);
			State = 105;
			Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Connection_leftContext : ParserRuleContext {
		public IdentContext instance;
		public IdentContext attrib;
		public MultiplicityContext mult;
		[System.Diagnostics.DebuggerNonUserCode] public IdentContext[] ident() {
			return GetRuleContexts<IdentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentContext ident(int i) {
			return GetRuleContext<IdentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MultiplicityContext multiplicity() {
			return GetRuleContext<MultiplicityContext>(0);
		}
		public Connection_leftContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_connection_left; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.EnterConnection_left(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.ExitConnection_left(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPumlgVisitor<TResult> typedVisitor = visitor as IPumlgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConnection_left(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Connection_leftContext connection_left() {
		Connection_leftContext _localctx = new Connection_leftContext(Context, State);
		EnterRule(_localctx, 12, RULE_connection_left);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			_localctx.instance = ident();
			State = 115;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__7) {
				{
				State = 108;
				Match(T__7);
				State = 109;
				_localctx.attrib = ident();
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 27648L) != 0)) {
					{
					State = 110;
					_localctx.mult = multiplicity();
					}
				}

				State = 113;
				Match(T__7);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Connection_rightContext : ParserRuleContext {
		public IdentContext attrib;
		public MultiplicityContext mult;
		public IdentContext instance;
		[System.Diagnostics.DebuggerNonUserCode] public IdentContext[] ident() {
			return GetRuleContexts<IdentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentContext ident(int i) {
			return GetRuleContext<IdentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MultiplicityContext multiplicity() {
			return GetRuleContext<MultiplicityContext>(0);
		}
		public Connection_rightContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_connection_right; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.EnterConnection_right(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.ExitConnection_right(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPumlgVisitor<TResult> typedVisitor = visitor as IPumlgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConnection_right(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Connection_rightContext connection_right() {
		Connection_rightContext _localctx = new Connection_rightContext(Context, State);
		EnterRule(_localctx, 14, RULE_connection_right);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__7) {
				{
				State = 117;
				Match(T__7);
				State = 118;
				_localctx.attrib = ident();
				State = 120;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 27648L) != 0)) {
					{
					State = 119;
					_localctx.mult = multiplicity();
					}
				}

				State = 122;
				Match(T__7);
				}
			}

			State = 126;
			_localctx.instance = ident();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConnectionContext : ParserRuleContext {
		public Connection_leftContext left;
		public Connection_rightContext right;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONNECTOR() { return GetToken(PumlgParser.CONNECTOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(PumlgParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Connection_leftContext connection_left() {
			return GetRuleContext<Connection_leftContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Connection_rightContext connection_right() {
			return GetRuleContext<Connection_rightContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StereotypeContext stereotype() {
			return GetRuleContext<StereotypeContext>(0);
		}
		public ConnectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_connection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.EnterConnection(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPumlgListener typedListener = listener as IPumlgListener;
			if (typedListener != null) typedListener.ExitConnection(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPumlgVisitor<TResult> typedVisitor = visitor as IPumlgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConnection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConnectionContext connection() {
		ConnectionContext _localctx = new ConnectionContext(Context, State);
		EnterRule(_localctx, 16, RULE_connection);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			_localctx.left = connection_left();
			State = 129;
			Match(CONNECTOR);
			State = 130;
			_localctx.right = connection_right();
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__8) {
				{
				State = 131;
				Match(T__8);
				State = 132;
				stereotype();
				}
			}

			State = 135;
			Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
